@@ -1,3 +1,7 @@
+2012-08-03  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added engine type to movement listing.
+
 2012-07-29  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* Reorganized armor listing.
